// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) Short enough class names do not cause syntactic transformations.' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div class="lorem ipsum dolor sit amet">
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(2) Long enough class names cause syntactic transformations.' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div
      class={\`lorem ipsum dolor sit amet consectetur
adipiscing elit proin ex massa hendrerit eu posuere eu
volutpat id neque pellentesque\`}
    >
      <slot />
    </div>
  </div>
</div>
"
`;

exports[`'(3) This transformation does not support reversible formatting.' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
<div>
  <div>
    <div class={"lorem ipsum dolor sit amet"}>
      <slot />
    </div>
  </div>
</div>
"
`;
